working on some styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
 	<meta charset="UTF-8">
 	<title>Luke's Star Wars Countdown is ON!</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,400,900|Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+<main class="home">
+	<section class="content">
+		<article class="contentUpper">
+			<h1>100 more sleeps until Luke gets to watch Star Wars Episode 7!</h1>
+		</article>
+		<article class="contentLower">
+			This is the countdown.
+		</article>
+	</section>
+	<section class="footer">
+		<p>Made for Luke</p> <p>By <a href="http://www.shawnebeyer.com">Shawn</a></p>
+	</section>
+</main>
 	
 </body>
 </html>
